logs/products.quaestrio.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/Quaestrio'...
Listing './lib/python3.5/site-packages/Products/Quaestrio/Extensions'...
Listing './lib/python3.5/site-packages/Products/Quaestrio/browser'...
Listing './lib/python3.5/site-packages/Products/Quaestrio/content'...
Listing './lib/python3.5/site-packages/Products/Quaestrio/i18n'...
Listing './lib/python3.5/site-packages/Products/Quaestrio/interfaces'...
Listing './lib/python3.5/site-packages/Products/Quaestrio/profiles'...
Listing './lib/python3.5/site-packages/Products/Quaestrio/profiles/default'...
Listing './lib/python3.5/site-packages/Products/Quaestrio/profiles/default/types'...
Listing './lib/python3.5/site-packages/Products/Quaestrio/skins'...
Listing './lib/python3.5/site-packages/Products/Quaestrio/skins/Quaestrio_images'...
Listing './lib/python3.5/site-packages/Products/Quaestrio/skins/Quaestrio_scripts'...
Listing './lib/python3.5/site-packages/Products/Quaestrio/skins/Quaestrio_styles'...
Listing './lib/python3.5/site-packages/Products/Quaestrio/skins/Quaestrio_templates'...
Listing './lib/python3.5/site-packages/Products/Quaestrio/tests'...
Compiling './lib/python3.5/site-packages/Products/Quaestrio/tests/test_validators.py'...
***   File "./lib/python3.5/site-packages/Products/Quaestrio/tests/test_validators.py", line 52
    print "\nWill match: %s" % i
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products/Quaestrio/validation'...
Listing './lib/python3.5/site-packages/Products.Quaestrio-0.13.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
